# stingray-plugin

./: .gitignore
editor/native/: CMakeLists.txt  editor_plugin.cpp
engine/: CMakeLists.txt  engine_plugin.cpp
plugin/: giphy-client.js  giphy-importer.js  giphy-viewer.js  giphy.stingray_plugin
plugin/giphy_resources/: screen.material
plugin/sample_project/: NnCumjsHychR6_50.texture  app.lua  boot.package  sample.level  sample.stingray_project  settings.ini
plugin/sample_project/giphy_resources/: giphy_tv.unit  screen.material
